--- a/00-intro.ipynb
+++ b/00-intro.ipynb
@@ -27,7 +27,7 @@
     "### Teremos 30 aulas com o seguinte conteúdo:\n",
     "\n",
     "1. Introdução ao curso\n",
-    "2. [Introdução ao SO Linux e Vim]{./01-linux-vim.ipynb}\n",
+    "2. [Introdução ao SO Linux e Vim](./01-linux-vim.ipynb)\n",
     "3. Linux 2\n",
     "4. Editando documentos em LaTex 1 \n",
     "<img src=\"Figs/word_vs_latex_1_eng.png\" width=50% >\n",
