--- a/02-Introducao_ao_Python.ipynb
+++ b/02-Introducao_ao_Python.ipynb
@@ -449,6 +449,412 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Listas\n",
+    "\n",
+    "As listas são similares às *strings*, porém cada elemento da lista pode ser de qualquer tipo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1,2,3,4]\n",
+    "print type(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print l[1:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nas listas os elementos não precisam ser do mesmo tipo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 'a', 1.0, (1-1j)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 'a', 1.0, 1-1j]\n",
+    "print l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "podemos gerar listas usando algumas funções do Python, por exemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 12, 14, 16, 18, 20, 22, 24, 26, 28]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start = 10\n",
+    "stop = 30\n",
+    "step = 2\n",
+    "\n",
+    "range(start, stop, step)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos modificar ou aidcionar elementos a uma lista, por exemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'd', 'd']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#criamos uma lista vazia\n",
+    "l = []\n",
+    "\n",
+    "# Adicionamos elementos usando append\n",
+    "l.append(\"A\")\n",
+    "l.append(\"d\")\n",
+    "l.append(\"d\")\n",
+    "\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tuplas\n",
+    "\n",
+    "São listas que não podem ser modificadas uma vez criadas. Elas são criadas usando `(...,...,...)` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((10, 20), <type 'tuple'>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "point = (10, 20)\n",
+    "\n",
+    "print(point, type(point))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estruturas de controle\n",
+    "\n",
+    "Controla a execução do código usando as palavras chave `if`, `elif` (else if), `else`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "os postulados 1 e 2 são falsos\n"
+     ]
+    }
+   ],
+   "source": [
+    "postulado1 = False\n",
+    "postulado2 = False\n",
+    "\n",
+    "if postulado1:\n",
+    "    print(\"postulado1 é verdadeiro\")\n",
+    "    \n",
+    "elif postulado2:\n",
+    "    print(\"postulado2 é verdadeiro\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"os postulados 1 e 2 são falsos\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Importante\n",
+    "Note que usamos uma identação para escrever linhas de código depois de cada estrutura de controle.  A identação é uma característica do Python, se ela não é correta, o programa não executa.  \n",
+    "Podem se usar TAB, ou espaçõs, mas ser consistente ao longo do código. Só de essa forma não aparecerão erros de Sintaxe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-10-2efd2e32b0bf>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-2efd2e32b0bf>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    print(\"postulado1 é verdadeiro\")\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "postulado1 = True\n",
+    "postulado2 = True\n",
+    "\n",
+    "if postulado1:\n",
+    "    if postulado2:\n",
+    "    #identação errada\n",
+    "    print(\"postulado1 é verdadeiro\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "postulado1 é verdadeiro\n"
+     ]
+    }
+   ],
+   "source": [
+    "# identação correta\n",
+    "postulado1 = True\n",
+    "postulado2 = True\n",
+    "\n",
+    "if postulado1:\n",
+    "    if postulado2:\n",
+    "        print(\"postulado1 é verdadeiro\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loops `for`\n",
+    "\n",
+    "Para criarmos estruturas em forma de loop, a forma mais comum é usar `for`, o qual permite iterar no interior de listas. A sintaxe basica é:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in [1,2,3]:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(4): # começa sempre no 0\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`range(4)` não inclui o número 4.  \n",
+    "\n",
+    "Note que novamente temos que usar a identação correta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3\n",
+      "-2\n",
+      "-1\n",
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(-3,3):\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos criar listas usando loops `for`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [x**2 for x in range(0,5)]\n",
+    "\n",
+    "print(l1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loop `while`\n",
+    "\n",
+    "é outra forma condicional de manter o codigo no interior de uma condição"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "\n",
+    "while i < 5:\n",
+    "    print(i)\n",
+    "    \n",
+    "    i = i + 1\n",
+    "# note que sai da identação do loop, portanto \n",
+    "# a seguinte linha de código está fora da condição i<5\n",
+    "print(\"done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
