--- a/02-Introducao_ao_Python.ipynb
+++ b/02-Introducao_ao_Python.ipynb
@@ -848,11 +848,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Funções\n",
+    "\n",
+    "As funções são bloques de código que contem comandos organizados e reusaveis, que permitem realizar uma determinada ação ou cálculo. Permitem que o codigo seja mais *modular*.  \n",
+    "\n",
+    "No que temos aprendido até agora ja usamos a função, `print ()`. Porém, essa função é implicita ao Python, vamos aprender a definir nossas proprias funções."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
+    "# estrutura para definir uma função, note a identação\n",
+    "def func0():   \n",
+    "    print(\"test\")\n",
+    "\n",
+    "# chamamos a função por fora de dita identação\n",
+    "func0()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De forma opcional, porém muito recomendável, podemos adicionar o chamado \"docstring\", que é uma descrição da proposta e comportamento da função. O \"docstring\" deve aparecer logo depois da definição da função, assim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def func1(s):\n",
+    "    \"\"\"\n",
+    "    Imprime um string 's' disse quantos caracteres essa string tem.\n",
+    "    Parametros:\n",
+    "    s: string \n",
+    "    Uso:\n",
+    "    Para usar digite\n",
+    "    func1(\"string_qualquer\")\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    print(s + \" has \" + str(len(s)) + \" characters\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function func1 in module __main__:\n",
+      "\n",
+      "func1(s)\n",
+      "    Imprime um string 's' disse quantos caracteres essa string tem.\n",
+      "    Parametros:\n",
+      "    s: string \n",
+      "    Uso:\n",
+      "    Para usar digite\n",
+      "    func1(\"string_qualquer\")\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(func1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test has 4 characters\n"
+     ]
+    }
+   ],
+   "source": [
+    "func1(\"test\")"
+   ]
   },
   {
    "cell_type": "code",
