--- a/02-Introducao_ao_Python.ipynb
+++ b/02-Introducao_ao_Python.ipynb
@@ -27,7 +27,7 @@
     "     \n",
     "* Vamos a abrir o terminal com o editor Vim e escrever\n",
     "\n",
-    "        print, \"ola mundo\"\n",
+    "        print (\"ola mundo\")\n",
     "        \n",
     "  salvamos e saímos com \":wq\"\n",
     "  \n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -172,8 +172,8 @@
    "source": [
     "# definimos numeros complexos assim\n",
     "a = 1.5 + 0.5j\n",
-    "print \"parte real de a = \", a.real\n",
-    "print \"parte imaginaria de a = \", a.imag"
+    "print (\"parte real de a = \", a.real)\n",
+    "print (\"parte imaginaria de a = \", a.imag)"
    ]
   },
   {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
        "[10, 12, 14, 16, 18, 20, 22, 24, 26, 28]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,8 +544,10 @@
     "start = 10\n",
     "stop = 30\n",
     "step = 2\n",
-    "\n",
-    "range(start, stop, step)"
+    "# em python2 seria unicamente \n",
+    "# range(start, stop, step)\n",
+    "# em python3,  \n",
+    "list(range(start, stop, step))"
    ]
   },
   {
@@ -619,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +806,7 @@
    ],
    "source": [
     "l1 = [x**2 for x in range(0,5)]\n",
-    "\n",
+    "#note que aqui range funciona, pois l1 já está criando uma lista\n",
     "print(l1)"
    ]
   },
@@ -950,6 +952,321 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Funções que retornam um valor usam a palavra chave `return`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def square(x):\n",
+    "    \"\"\"\n",
+    "    Retorna o quadrado de x\n",
+    "    \"\"\"\n",
+    "    return x ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "576"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square(24)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos retornar vários valores de uma função usando as `tuplas` vistas acima"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def powers(x):\n",
+    "    \"\"\"\n",
+    "    Retorna algumas potencias de x.\n",
+    "    \"\"\"\n",
+    "    return x ** 2, x ** 3, x ** 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9, 27, 81)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "powers(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como o resultado é uma tupla podemos aceder a seus valores individualmente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "powers(3)[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Definição de argumentos *default* (padrão) e argumentos *chave*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myexp(x, p=2, debug=False):\n",
+    "    if debug:\n",
+    "        print(\"função que calcula x = \" + str(x) + \" elevada ao exponente p = \" + str(p))\n",
+    "    return x**p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Neste caso a função precisa de 3 argumentos, *x* é absolutamente necessário, *p* e *debug* são opcionais, se eles não são passados quand a função é chamada, esta utilizara os valores padrão deles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# neste caso não passamos nenhum argumento, p=2 e debug=False, são padrão\n",
+    "myexp(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "função que calcula x = 2 elevada ao exponente p = 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# neste caso passamos p=3 e debug=True, \n",
+    "myexp(x,p=3,debug=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se listamos os argumentos da função de forma explicita, a ordem de definição na função não precisa ser a mesma na hora de ser chamada.  Isto é chamado de argumentos *chave* e é comunmente usado em funções que tem multiplos argumentos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "função que calcula x = 8 elevada ao exponente p = 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "512"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myexp(p=3,debug=True,x=8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Funções indefinidas (a função `lambda`)\n",
+    "\n",
+    "Podemos criar funções sem necessidade de defini-las usando a palavra chave `lambda`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1 = lambda x: x**2\n",
+    "    \n",
+    "# é equivalente a:\n",
+    "\n",
+    "def f2(x):\n",
+    "    return x**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 4)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f1(2), f2(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definir esse tipo de funções é útil quando queremos passar funções simples como argumento a outra função, por exemplo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 4, 1, 0, 1, 4, 9]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# map is a built-in python function\n",
+    "list(map(lambda x: x**2, range(-3,4)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A função `map` do python receve uma função e variáves iteráveis, como listas. Ela executa a função para cada elemento da lista."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Outro exemplo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(x, y): \n",
+    "    return x + y\n",
+    "\n",
+    "# é equivalente a:\n",
+    "\n",
+    "add = lambda x, y: x+y"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -959,21 +1276,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
