--- a/02-Introducao_ao_Python.ipynb
+++ b/02-Introducao_ao_Python.ipynb
@@ -1267,6 +1267,374 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classes\n",
+    "\n",
+    "As classes são características chave do que se conhece como programação orientada a objetos (OOP).  É uma estrutura de software que representa um objeto e as operações que podem ser realizadas sob ele.   \n",
+    "\n",
+    "Em Python uma classe pode conter *atributos* (variáveis), e *métodos* (funções).\n",
+    "\n",
+    "Uma classe é definida quase como qualquer função, mas usando a palavra chave `class`. Junto com a definição da classe normalmente segue a definição de métodos da classe, ou seja das funções.\n",
+    "\n",
+    "* Cada função de uma classe deve ter um um argumento `self` como seu primeiro argumento. Esse objeto é uma *self-reference* (auto-referência).\n",
+    "\n",
+    "* Algumas das funções da clase tem nomes especiais, por exemplo:\n",
+    "\n",
+    "    * `__init__`: é o nome do método que é chamado quando o primeiro objeto é definido. \n",
+    "    * `__str__`: é um método que é chamado quando uma *string* é necessária, ou seja, quando precisamos imprimir texto, por exemplo. \n",
+    "    * há muitas mais funções especiais [veja](http://docs.python.org/2/reference/datamodel.html#special-method-names).\n",
+    "    \n",
+    "Uma das características mais interessantes do desenvolvimento de software orientado a objetos é que funções e variáveis se agrupam em entidades separadas e independentes\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ponto:\n",
+    "    \"\"\"\n",
+    "    Classe simples para representar um ponto num ponto Cartesiano.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, x, y):\n",
+    "        \"\"\"\n",
+    "        Cria um novo ponto em  x, y.\n",
+    "        \"\"\"\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        \n",
+    "    def movimente(self, dx, dy):\n",
+    "        \"\"\"\n",
+    "        Movimenta o ponto por dx e dy nas direções x e y.\n",
+    "        \"\"\"\n",
+    "        self.x += dx\n",
+    "        self.y += dy\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return(\"O Ponto está em [%f, %f]\" % (self.x, self.y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O Ponto está em [1.000000, 2.000000]\n",
+      "O Ponto está em [6.000000, 7.500000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "p1 = ponto(1.,2.)\n",
+    "print(p1)\n",
+    "p1.movimente(5,5.5)\n",
+    "print(p1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O Ponto está em [7.000000, 8.500000]\n",
+      "O Ponto está em [1.000000, 1.000000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "p2 = ponto(1,1)\n",
+    "p1.movimente(1,1)\n",
+    "print(p1)\n",
+    "print(p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p3 = p1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O Ponto está em [7.000000, 8.500000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vejamos uma classe mais interessante\n",
+    "\n",
+    "Vamos criar uma classe para trabalhar com números complexos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Classe para trabalhar com numeros complexos                                                      \n",
+    "class Complex1:\n",
+    "#construtor da clase, cria um objeto chamado ComplexG\n",
+    "        def __init__(z,x,y):\n",
+    "                z.re = x\n",
+    "                z.im = y\n",
+    "\n",
+    "        def soma(z1, z2):\n",
+    "                return Complex1(z1.re + z2.re , z1.im + z2.im)\n",
+    "\n",
+    "        def subs(z1,z2):\n",
+    "                return Complex1(z1.re - z2.re , z1.im - z2.im)\n",
+    "\n",
+    "        def mult(z1,z2):\n",
+    "                return Complex1(z1.re*z2.re - z1.im*z2.im,\n",
+    "                                z1.re*z2.im + z1.im*z2.re )\n",
+    "\n",
+    "\n",
+    "        def __repr__(z):\n",
+    "                return '(%f, %f)' %(z.re, z.im)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2.000000, 3.000000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "z1 = Complex1(2.,3.)\n",
+    "print(z1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z2 = Complex1(4.,6.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z3 = Complex1.soma(z1,z2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6.000000, 9.000000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(z3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z1 - z2 = (-2.000000, -3.000000)\n",
+      "z1 * z2 = (-10.000000, 24.000000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('z1 - z2 =' , Complex1.subs(z1,z2))\n",
+    "print ('z1 * z2 =' , Complex1.mult(z1,z2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora vamos a usar o atributo `self`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Complex2:\n",
+    "# self é uma palavra reservada em python, e se refere ao objeto \n",
+    "# asociado a clase, note que agora não precisamos definir z\n",
+    "                                                                                                  \n",
+    "        def __init__(self,x,y):\n",
+    "                self.re = x\n",
+    "                self.im = y\n",
+    "                \n",
+    "# a palavra reservada other, terá as mesmas caracteristicas que self\n",
+    "\n",
+    "        def soma(self, other):\n",
+    "                return Complex2(self.re + other.re , self.im + other.im)\n",
+    "\n",
+    "        def subs(self,other):\n",
+    "                return Complex2(self.re - other.re , self.im - other.im)\n",
+    "\n",
+    "        def mult(self,other):\n",
+    "                return Complex2(self.re*other.re - self.im*other.im,\n",
+    "                                self.re*other.im + self.im*other.re )\n",
+    "        def abs(self):\n",
+    "                return (self.re**2 + self.im**2)**0.5\n",
+    "\n",
+    "        def __repr__(self):\n",
+    "                return '(%f, %f)' %(self.re, self.im)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z1 = Complex2(2.,5)\n",
+    "z2 = Complex2(1.,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1.000000, 2.000000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "z3 = Complex2.subs(z1,z2)\n",
+    "print(z3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Operator overloading:\n",
+    "\n",
+    "Podemos usar os operadores normais, `+`, `-`, `%`, etc, dentro das nossas classes. Quando algumas variáveis são criadas como pertencentes à classe, os operadores irão fazer as operações definidas na classe e não a sua operação original."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Complex3:\n",
+    "# Nessa clase vamos sobreescrever as operações realizadas por os\n",
+    "# operadores +, -, * \n",
+    "\n",
+    "        def __init__(self,x,y):\n",
+    "                self.re = x\n",
+    "                self.im = y\n",
+    "\n",
+    "# a função __add__ vai permitir usar o operador + para fazer\n",
+    "# somas entre complexos. Assim mesmo com os outros operadores.\n",
+    "\n",
+    "        def __add__(self, other):\n",
+    "                return Complex3(self.re + other.re , self.im + other.im)\n",
+    "\n",
+    "        def __sub__(self,other):\n",
+    "                return Complex3(self.re - other.re , self.im - other.im)\n",
+    "\n",
+    "        def __mul__(self,other):\n",
+    "                return Complex3(self.re*other.re - self.im*other.im,\n",
+    "                                self.re*other.im + self.im*other.re )\n",
+    "        def __abs__(self):\n",
+    "                return (self.re**2 + self.im**2)**(0.5)\n",
+    "\n",
+    "        def __repr__(self):\n",
+    "                return '(%f, %f)' %(self.re, self.im)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = Complex3(3,-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.605551275463989"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs(a)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
