--- a/03-Introducao_ao_Python_2.ipynb
+++ b/03-Introducao_ao_Python_2.ipynb
@@ -663,7 +663,7 @@
     "\\end{equation}\n",
     "\n",
     "\n",
-    "Considerando, $V=V_0 e^{i\\omega t}$ e assumindo um resultado da forma $I=I_0 e^{i\\omega t}$ obtemos:  \n",
+    "Considerando, $V=V_0 e^{i\\omega t}$ e assumindo um resultado da forma $I=I_0 e^{-i\\omega t}$ obtemos:  \n",
     "\n",
     "\n",
     "\\begin{equation}\n",
@@ -678,7 +678,7 @@
     "Logo,\n",
     "\n",
     "\\begin{equation}\n",
-    "I(t) = \\frac{V_0}{|Z|} e^{-i \\omega t + \\theta} = \\frac{V_0}{|Z|} \n",
+    "I(t) = \\frac{V_0}{|Z|} e^{-i (\\omega t + \\theta)} = \\frac{V_0}{|Z|} \n",
     "     \\left[\\cos(\\omega t + \\theta) - i \\sin(\\omega t + \\theta) \\right] \\;,\n",
     "\\end{equation}\n",
     "\n",
@@ -688,7 +688,7 @@
     "       \\theta = \\tan^{-1}\\left( \\frac{1/\\omega C - \\omega L}{R} \\right)\n",
     "\\end{equation}\n",
     "\n",
-    "Para um determinado valor de indutância, $L=1000$ Henry, e de Capacitancia, $C=1/1000$ Faradios, vamos a utilizar nossa classe *Complex* para calcular a corrente e a fase da corrente para resistências entre $0$ e $1000 \\Omega$, e frequências $w$ entre $0$ e $2$ Hz. "
+    "Para um determinado valor de indutância, $L=1000$ Henry, e de Capacitancia, $C=1/1000$ Faradios, vamos a utilizar nossa classe *Complex* para calcular a corrente e a fase da corrente para 5 resistências entre $0$ e $1000 \\Omega$, e 3 frequências $w$ entre $0$ e $2$ Hz. "
    ]
   },
   {
