two more chapters

--- a/00-intro.ipynb
+++ b/00-intro.ipynb
@@ -32,13 +32,16 @@
     "4. Editando documentos em LaTex 1 \n",
     "<img src=\"Figs/word_vs_latex_1_eng.png\" width=50% >\n",
     "5. Editando documentos em LaTex 2\n",
-    "6. Python 1: Introdução\n",
+    "6. [Python 1: Introdução](./02-Introducao_ao_Python.ipynb)\n",
     "<img src=\"Figs/growth_major_languages.png\" width=50% >\n",
-    "7. Python 2: Modulos, Numpy, Scipy\n",
-    "8. Jupyter 1: editando com Markdown\n",
-    "9. Jupyter 2 [(o futuro das publicações científicas)](https://www.theatlantic.com/science/archive/2018/04/the-scientific-paper-is-obsolete/556676/)\n",
-    "10. Prova prática 1\n",
-    "11. Analise de séries temporais 1\n",
+    "7. [Python 2: Modulos, Numpy, Scipy](./03-Introducao_ao_Python_2.ipynb)\n",
+    "8. Jupyter notebook\n",
+    "    * Jupyter [(o futuro das publicações científicas)](https://www.theatlantic.com/science/archive/2018/04/the-scientific-paper-is-obsolete/556676/)\n",
+    "    * [Breve tutorial de Markdown](./04-markdown.ipynb)\n",
+    "9.  A expansão em serie de Taylor, diferenciação numérica\n",
+    "10. Integração numérica\n",
+    "<img src=\"Figs/Integral_as_region_under_curve.png\" width=50% >\n",
+    "11. Prova prática 1\n",
     "12. Graficando em Python 1: matplotlib\n",
     "[(anatomia de matplotlib)](https://github.com/matplotlib/AnatomyOfMatplotlib)\n",
     "13. Analise de séries temporais 2\n",
@@ -56,9 +59,7 @@
     "21. Prova prática 2\n",
     "22. Algebra matricial 1\n",
     "23. Algebra matricial 2\n",
-    "24. Diferenciação numérica\n",
-    "25. Integração numérica\n",
-    "<img src=\"Figs/Integral_as_region_under_curve.png\" width=50% >\n",
+    "24. Analise de séries temporais 1\n",
     "26. Solução de equações diferenciais ordinárias EDO 1\n",
     "27. EDO 2\n",
     "28. Introudução a inteligencia artificial\n",
@@ -129,21 +130,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
