--- a/05-taylor-series.ipynb
+++ b/05-taylor-series.ipynb
@@ -586,8 +586,243 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analise de erro\n",
+    "# Analise de erro nas derivadas\n",
+    "## (e nos cálculos numéricos em geral)\n",
+    "\n",
+    "## Presisão da máquina, erros de *round-off*\n",
+    "\n",
+    "#### Quais são o maior e menor números reais que podem ser escritos com 32 bits?  Qual é a sua precisão? \n",
+    "\n",
+    "Para responder essas perguntas temos que entender como um número é escrito na memoria do computador:\n",
+    "\n",
+    "Se quisermos escrever o numero $9.90625$ na notação de bits\n",
+    "\n",
+    "$$ 9.90625 = 0.990625 \\times 10^1 $$\n",
+    "\n",
+    "Um número $x$ qualquer é então:\n",
+    "\n",
+    "\n",
+    "$$ x = \\pm r \\times 10^n \\;, \\; {\\rm com} \\; 1/10 < r < 1 \\;. $$\n",
+    "\n",
+    "\n",
+    "Em representação binaria\n",
+    "\n",
+    "\\begin{equation}\n",
+    "x = \\pm q \\times 2^m \\;, \\; {\\rm com} \\; 1/2 < q < 1 \\;.\n",
+    "\\end{equation}\n",
+    "\n",
+    "Para a máquina, o número é representado como:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "x = (-1)^s \\times {\\rm mantissa} \\times 2^{\\rm m} \\;,\n",
+    "\\end{equation}\n",
+    "\n",
+    "onde $s$ é o bit do sinal, o exponente, $ {\\rm m} $ da a magnitude do número e a  mantisa é o numero mesmo.\n",
+    "\n",
+    "\\begin{equation}\n",
+    "{\\rm mantissa} = (0.a_{-1} a_{-2} ...a_{-n})_n = a_{-1} 2^{-1} + \n",
+    "                a_{-2} 2^{-2} + ... + a_n 2^{-n}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Para um real de $4$ bytes de memoria, $32$ bits, $8$ bits são reservados para o\n",
+    "exponente, 1 bit para o sinal, e 23 bits para a mantissa.  O intervalo do exponente vai de \n",
+    "$2^{-128} = 2.9 \\times 10^{-39}$ a  $2^{127} = 3.4 \\times 10^{38}$ (o numero 128 bem do fato que \n",
+    "temos 8 bits).  `A precisão do número está dado na mantissa, como temos 23 bits:  $1/2^{23} = 10^{-7}$`.\n",
+    "\n",
+    "#### Exemplo\n",
+    "\n",
+    "Vamos expressar o seguinte número binario em notação decimal: \n",
+    "\n",
+    "\\begin{equation}\n",
+    "(10111110111101000000000000000000)_2\n",
+    "\\end{equation}\n",
+    "\n",
+    "O primeiro bit: $1$ é o sinal ($0 =$ positivo, $1 = $ negativo). Os $8$ digitos seguintes, $01111101$ são o exponente:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "125"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0*2**7 + 1*2**(6) + 1*2**(5) + 1*2**(4) + 1*2**(3) + 1*2**(2) + 0*2**(1) + 1*2**0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O máximo número que podemos obter é:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "255"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1*2**7 + 1*2**(6) + 1*2**(5) + 1*2**(4) + 1*2**(3) + 1*2**(2) + 1*2**(1) + 1*2**0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Logo,  Já que $-128 < m \\le 127$, o exponente será $125 - 127 = -2$, ou seja teremos $2^{-2}$. O resultado da mantissa, $11101000000000000000000$, é: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.90625"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(2**0 + 2**(-1) + 2**(-2) + 2**(-3) + 2**(-5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Considerando todos os termos resulta em:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "-2^{-2} (1 \\times 2^0 + 1 \\times 2^{-1} + 1 \\times 2^{-2} + 1\\times 2^{-3} + \n",
+    "         0 \\times 2^{-4} + 1 \\times 2^{-5}) \\nonumber \n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "\\begin{equation}\n",
+    "(10111110111101000000000000000000)_2 = (-0.4765625)_{10}\n",
+    "\\end{equation}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.4765625"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-2**(-2)*(2**0 + 2**(-1) + 2**(-2) + 2**(-3) + 2**(-5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Dessa forma entendemos que a precisão da máquina para uma variável `float32` é de $2 \\times 10^{-7}$, para uma variável `float64` é de $10^{-16}$. \n",
+    "\n",
+    "* Quando queremos fazer operações com números que são pequenos o suficiente devemos ter cuidado nos cálculos para não cometer erros de *round-off*.  \n",
+    "\n",
+    "* Este erro vem da diferência entre um número definido, aproximado, no computador, e o valor exato do mesmo.\n",
+    "\n",
+    "[Há alguns exemplos chocantes de erros de *round-off*:](http://mathworld.wolfram.com/RoundoffError.html)\n",
+    "\n",
+    "O misil Patriot, usado na guerra do golfo, tornou-se inefetivo devido a um erro de *round-off*.  O sistema usava um sistema de registro de tempo inteiro que aumentava a cada $0.1$ s.  Para converter valores inteiros eram convertidos a reais multiplicando pela aproximação binaria de 0.1:\n",
+    "\n",
+    "$$ 0.00011001100110011001100_{2} = \\frac{209715}{2097152} $$\n",
+    "\n",
+    "\n",
+    "Como resultado, depois de 100 horas, tiveram um error acumulado de:\n",
+    "\n",
+    "$$ \\left(\\frac{1}{10} -  \\frac{209715}{2097152} \\right) \\times (3600 \\cdot 100 \\cdot 10) \n",
+    " = \\frac{5625}{16384} = 0.3433 \\; {\\rm s} $$ \n",
+    "\n",
+    "A discrepância entre o tempo real e o tempo calculado fez o missil Patriot se *resetar* continuamente.  Um missil Squd, do exercito Iraqui, não foi efetivamente detetado e detonou nas trincheiras, levando a morte de 28 pessoas.  \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Erro nas derivadas numéricas\n",
+    "Vamos definir o erro relativo da seguinte forma:\n",
+    "\n",
+    "$$\\epsilon = \\left| \\frac{f''_{\\rm calculado} - f''_{\\rm exato}}{f''_{\\rm exato}} \\right|  $$\n",
+    "\n",
+    "O erro pode aparecer devido a perda de presição numérica ou devido ao truncamento\n",
+    "da expansão em series.\n",
+    "\n",
+    "$$ \\epsilon_{\\rm total} = \\epsilon_{\\rm approx} + \\epsilon_{\\rm ro} $$\n",
+    "\n",
+    "Para a segunda derivada temos:\n",
+    "\n",
+    "\n",
+    "$$ f''_0 = \\frac{f_{+} - 2 f_0+ f_{-}}{\\Delta x^2} - 2 \\sum_{j=1}^{\\infty} \\frac{f_0^{2j+2}}{(2j+2)!} \\Delta x^{2j} $$\n",
+    "\n",
+    "com um erro de truncamento dado por\n",
+    "\n",
+    "$$ \\epsilon_{\\rm approx} = \\frac{f_0^{(4)}}{12} \\Delta x^2 $$\n",
+    "\n",
+    "Se o erro de truncamento fosse a unica coisa para nos preocupar poderiamos fazer $\\Delta x$ muito pequeno, porem:\n",
+    "\n",
+    "$$  f''_0 = \\frac{f_{+} - 2 f_0+ f_{-}}{\\Delta x^2} = \\frac{(f_+-f_0)+(f_{-}-f_0)}{\\Delta x^2} $$\n",
+    "\n",
+    "o qual é problematico no caso que $f_{\\pm}$ e $f_0$ sejam números muito próximos. Então temos $f_{\\pm}-f_0 \\simeq \\epsilon_M$, onde $|\\epsilon_M|  \\le 10^{-7}$ para variáveis de presição simples, `float32`, e $|\\epsilon_M|  \\le 10^{-15}$ para variáves `float64`. Assim: \n",
+    "\n",
+    "$$ |\\epsilon_{\\rm tot}| \\le \\frac{2 \\epsilon_M}{\\Delta x^2} + \\frac{f_0^{(4)}\\Delta x^2}{12} $$\n",
+    "\n",
+    "Minimizando $|\\epsilon_{\\rm tot}|$ para encontrar o valor de $\\Delta x$ que gera o menor erro obtemos\n",
+    "\n",
+    "$$ \\Delta x = \\left( \\frac{24 \\epsilon_M}{f^{(4)}_0} \\right)^{1/2} $$\n",
+    "\n",
+    "que para presição doble implica (para um valor de $x$ qualquer, e.g.,  $x=10.0$): $\\Delta x \\simeq 10^{-4}$.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Atividade:\n",
+    "\n",
+    "Vamos utilizar o programa acima para calcuar a segunda derivada numérica da função $f(x) = \\exp(x) $ (note que conhecemos o valor exato dessa derivada).  Vamos reduzir progressivamente o valor de $\\Delta x$ e graficar $\\log(\\Delta x)$ vs $\\epsilon$."
    ]
   },
   {
