--- a/02-Introducao_ao_Python.ipynb
+++ b/02-Introducao_ao_Python.ipynb
@@ -25,7 +25,7 @@
     "* Cada linha de num programa de Python é considerada um comando (ou parte dele)\n",
     "     * A unica excepção são as linhas que começam com \"#\", que permitem comentar o código. Esas linhas são ignoradas pelo interpretador\n",
     "     \n",
-    "* Vamos a abrir o terminal com o editor Vim e escrever\n",
+    "* Vamos abrir o terminal com o editor Vim e escrever\n",
     "\n",
     "        print (\"ola mundo\")\n",
     "        \n",
@@ -33,37 +33,37 @@
     "  \n",
     "    \n",
     "     \n",
-    "* Para rodar um programa de Python na terminal usamos \n",
+    "* Para rodar um programa de Python no terminal usamos \n",
     "\n",
     "         $ python olamundo.py\n",
     "      \n",
     "\n",
-    "* Nos sistemas Unix (linux por exemplo) é común definir o interpretador de Python na primeira linha do programa:\n",
+    "* Nos sistemas Unix (linux por exemplo) é comum definir o interpretador de Python na primeira linha do programa:\n",
     "\n",
     "      #!/usr/bin/env python \n",
     "     \n",
-    "Se fazemos isso, e damos ao programa permissão para ser executável, podemos rodaro o program usando unicamente\n",
+    "Se fazemos isso, e damos ao programa permissão para ser executável, podemos rodar o programa usando unicamente\n",
     "\n",
     "         $ ./olamundo.py\n",
     "\n",
     "\n",
     "## Codificação de caracteres \n",
     "\n",
-    "A codificação padrão é ASCII, mas como vimos nas aulas de Latex, essa codificação não permite usar os caracteres com acento em portugués.  Se queremos usar portugués no código em Python, mesmo até nos comentários, usamos:\n",
+    "A codificação padrão é ASCII, mas como vimos nas aulas de Latex, essa codificação não permite usar os caracteres com acento em portugués.  Se queremos usar portugués no código em Python, mesmo nos comentários, usamos então:\n",
     "\n",
     "        # -*- coding: UTF-8 -*-\n",
     "        \n",
     "## IPython notebooks\n",
     "\n",
-    "Os notebooks de Python, que se salvam com extensão \".ipynb\", tal como esse arquivo aqui, não segue os padrões de Python mas o formato [JSON](https://en.wikipedia.org/wiki/JSON). A vantagem é que podemos misturar texto, código de Python, e saídas do código. Precisa de um servidor de IPython para poder rodar, portanto não é um programa de Python por sim. Iremos usar o Jupyter. \n",
+    "Os notebooks de Python, que salvam com a extensão \".ipynb\", tal como esse arquivo, não segue os padrões de Python mas o formato [JSON](https://en.wikipedia.org/wiki/JSON). A vantagem é que podemos misturar texto, código de Python, e saídas do código. É preciso um servidor de IPython para roda-lo, portanto não é um programa de Python em si. Iremos usar o Jupyter. \n",
     "\n",
     "## Tipos de variáveis\n",
     "\n",
-    "Os nomes das variáveis podem conter carateres alfanumericos, `a-z`, `A-Z`, `0-9`, e alguns caracteres especiais como `_`.  \n",
+    "Os nomes das variáveis podem conter carateres alfanuméricos, `a-z`, `A-Z`, `0-9`, e alguns caracteres especiais como `_`.  \n",
     "\n",
-    "Por convenção, os nomes das variáveis começam com minuscula, os nomes das classes com maiúscula.  \n",
+    "Por convenção, os nomes das variáveis começam com minúscula, os nomes das classes com maiúscula.  \n",
     "\n",
-    "Python tém um certo numero de variáveis que não podem ser usados pelo usuario:\n",
+    "Python tem um certo numero de variáveis que não podem ser usados pelo usuario:\n",
     "\n",
     "    and, as, assert, break, class, continue, def, del, elif, else, except, \n",
     "    exec, finally, for, from, global, if, import, in, is, lambda, not, or,\n",
@@ -556,7 +556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos modificar ou aidcionar elementos a uma lista, por exemplo"
+    "Podemos modificar ou adicionar elementos a uma lista, por exemplo"
    ]
   },
   {
@@ -676,7 +676,7 @@
    "source": [
     "#### Importante\n",
     "Note que usamos uma identação para escrever linhas de código depois de cada estrutura de controle.  A identação é uma característica do Python, se ela não é correta, o programa não executa.  \n",
-    "Podem se usar TAB, ou espaçõs, mas ser consistente ao longo do código. Só de essa forma não aparecerão erros de Sintaxe"
+    "Podem usar TAB ou espaços, mas é necessário ser consistente ao longo do código. Só dessa forma não aparecerão erros de sintaxe"
    ]
   },
   {
@@ -732,7 +732,7 @@
    "source": [
     "#### Loops `for`\n",
     "\n",
-    "Para criarmos estruturas em forma de loop, a forma mais comum é usar `for`, o qual permite iterar no interior de listas. A sintaxe basica é:"
+    "Para criarmos estruturas em forma de loop, o método mais comum é usando `for`, o qual permite iterar no interior de listas. A sintaxe basica é:"
    ]
   },
   {
@@ -883,7 +883,7 @@
    "source": [
     "## Funções\n",
     "\n",
-    "As funções são bloques de código que contem comandos organizados e reusaveis, que permitem realizar uma determinada ação ou cálculo. Permitem que o codigo seja mais *modular*.  \n",
+    "As funções são blocos de código que contém comandos organizados e reusaveis, que permitem realizar uma determinada ação ou cálculo. Permitem que o código seja mais *modular*.  \n",
     "\n",
     "No que temos aprendido até agora ja usamos a função, `print ()`. Porém, essa função é implicita ao Python, vamos aprender a definir nossas proprias funções."
    ]
@@ -925,7 +925,7 @@
    "source": [
     "def func1(s):\n",
     "    \"\"\"\n",
-    "    Imprime um string 's' disse quantos caracteres essa string tem.\n",
+    "    Imprime um string 's' diz quantos caracteres essa string tem.\n",
     "    Parametros:\n",
     "    s: string \n",
     "    Uso:\n",
@@ -950,7 +950,7 @@
       "Help on function func1 in module __main__:\n",
       "\n",
       "func1(s)\n",
-      "    Imprime um string 's' disse quantos caracteres essa string tem.\n",
+      "    Imprime um string 's' diz quantos caracteres essa string tem.\n",
       "    Parametros:\n",
       "    s: string \n",
       "    Uso:\n",
