--- a/00-intro.ipynb
+++ b/00-intro.ipynb
@@ -38,7 +38,7 @@
     "8. Jupyter notebook\n",
     "    * Jupyter [(o futuro das publicações científicas)](https://www.theatlantic.com/science/archive/2018/04/the-scientific-paper-is-obsolete/556676/)\n",
     "    * [Breve tutorial de Markdown](./04-markdown.ipynb)\n",
-    "9.  A expansão em serie de Taylor, diferenciação numérica\n",
+    "9.  [A expansão em serie de Taylor, diferenciação numérica](05-taylor-series.ipynb)\n",
     "10. Integração numérica\n",
     "<img src=\"Figs/Integral_as_region_under_curve.png\" width=50% >\n",
     "11. Prova prática 1\n",
