--- a/06-Integracao-numerica.ipynb
+++ b/06-Integracao-numerica.ipynb
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
      "text": [
       "método do trapezio: 3.1415232380686264\n",
       "método de Simpson): 3.1415905296540054\n",
-      "método de Simpson): (3.141592653589793, None)\n"
+      "método de Simpson): (3.1415926535897927, None)\n"
      ]
     }
    ],
@@ -366,16 +366,34 @@
     "dx = x[1] - x[0]\n",
     "print('método do trapezio:', integrate.trapz(f(x),dx=dx))\n",
     "print('método de Simpson):', integrate.simps(f(x),dx=dx))\n",
-    "print('método de Simpson):', integrate.fixed_quad(f,0,1.,n=50))"
+    "print('método de Simpson):', integrate.fixed_quad(f,0,1.,n=20))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "F_exacta = np.pi"
+    "np.pi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O método da quadratura Gaussiana é um dos mais eficientes para calcular integrais numéricas"
    ]
   },
   {
@@ -383,18 +401,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Nvec = [2**i for i in range(2,17)]\n",
-    "x = \n",
-    "erro_trap = [abs(integrate.trapz(f(x),dx=dx) -F_exata)/F_exata for n in Nvec]\n",
-    "erro_simp = [abs(simpson(a, b, n)-F_exata)/F_exata for n in Nvec]\n",
-    "\n",
-    "plt.loglog(Nvec, erro_trap,lw=3, color='orange', label='Trapézio')\n",
-    "plt.loglog(Nvec, erro_simp,lw=3, color='blue', label='Simpson')\n",
-    "plt.title(\"Erro no métodos de integração\")\n",
-    "plt.legend()\n",
-    "plt.show()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
